[gd_scene load_steps=13 format=4 uid="uid://c7vf8dwe3tj4"]

[ext_resource type="Texture2D" uid="uid://pxa5mjotgwir" path="res://PototypeModel/GLB format/Textures/colormap.png" id="1_7kgrs"]
[ext_resource type="Script" path="res://test/drop item/basic_ground_button.gd" id="1_kccom"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mm1ov"]
resource_name = "colormap"
cull_mode = 2
albedo_texture = ExtResource("1_7kgrs")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_q146t"]
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 0.1, 1),
"format": 34896613377,
"index_count": 192,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYAAAAGAAcABwABAAAAAgADAAgACAAJAAIACAAKAAsACwAJAAgADAAFAAQABAANAAwACgAOAA8ADwALAAoADgAMAA0ADQAPAA4AEgAQABEAEQATABIAEQAUABUAFQATABEAFAAWABcAFwAVABQAGAAQABIAEgAZABgAGQAaABsAGwAYABkADAAOAAoAHAAMAAoADAAcAB0AGwAcAAoADAAdABYAGwAKAAgAGAAbAAgAEAAYAAgABQAMABYAEAAIAAMABQAWABQABQAUABEAAwARABAABQARAAMABwAFAAMAAwABAAcAGgAeABwAHAAbABoACQALAA8AGgAJAA8ACQAaABkAHgAaAA8ACQAZABIAHgAPAA0AHwAeAA0AFwAfAA0AAgAJABIAFwANAAQAAgASABMAAgATABUABAAVABcAAgAVAAQAAAACAAQABAAGAAAAHgAfAB0AHQAcAB4AFwAWAB0AHQAfABcA"),
"lods": [0.042627, PackedByteArray("AgAEAAcABwABAAIAAgABAAgACAAJAAIADwAJAAgACAAMAA8ADAAHAAQABAANAAwADQAPAAwAEQATABIAFQATABEAEQAUABUAFwAVABQAFwAUAB0AHQAeABcAEgAaABgAGAARABIAHQAcAB4AGgAeABwAHAAYABoAHAAMAAgADAAcAB0AGAAcAAgADAAdABQAEQAYAAgABwAMABQABwAUABEABwARAAEAEQAIAAEAGgAJAA8ACQAaABIAHgAaAA8AAgAJABIAHgAPAA0AAgASABMAFwAeAA0AAgATABUAFwANAAQAAgAVAAQABAAVABcA"), 0.704991, PackedByteArray("AgAEAAEAAgABAAgADAABAAQABAAPAAwACAAMAA8ADwAJAAgACAAJAAIAGAATABoAGgAVABgAFQATABgAGAAMAAgAAQAMABgAGAAIAAEAGgAJAA8AGgAPAAQAAgAJABoABAAVABoAAgAVAAQAAgAaABMAAgATABUA")],
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("/////zLzAAD//wAAMvMAADLz/////wAAMvMAAP//AAAy8///AAAAADLzAAAAAAAA/////8wMAAD//wAAzAwAAMwMAAD//wAAzAz/////AAAAAAAAMvMAAAAA//8y8wAAzAwAAAAAAADMDP//AAAAAAAAAADMDAAAAAD//8wMAADk7QAAMvMAADLzAADk7QAA5O3//zLzAAAy8///5O0AADLzAAAaEgAAMvP//xoSAADk7QAAzAwAAOTt///MDAAAGhIAADLzAAAaEv//MvMAAMwM///k7QAAzAwAAOTtAADMDAAAGhIAABoSAADMDAAAzAz//xoSAAAaEv//zAwAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_lcok0"]
resource_name = "button-floor-square_button-floor-square"
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 0.1, 1),
"attribute_data": PackedByteArray("/3dlxv93mPn/d2XG/3eY+f93Zcb/d5j5/3dlxv93mPn/d2XG/3eY+f93Zcb/d5j5/3eY+f93mPn/d2XG/3dlxv93mPn/d2XG/3eY+f93Zcb/d5j5/3dlxv93mPn/d2XG/3eY+f93Zcb/d5j5/3dlxv93mPn/d2XG/3eY+f93Zcb/N5j5/zeY+f83Zcb/N2XG/zeY+f83Zcb/N5j5/zdlxv83mPn/N2XG/zeY+f83Zcb/N5j5/zdlxv83mPn/N2XG/zdlxv83mPn/N2XG/zeY+f83mPn/N5j5/zeY+f83mPn/N5j5/zeY+f83mPn/N5j5/zeY+f83mPn/N5j5/zeY+f83mPn/N5j5/zeY+f83mPn/N2XG/zeY+f83Zcb/N5j5/zdlxv83Zcb/N2XG/zdlxv83Zcb/N2XG/zdlxv83Zcb/N2XG/zdlxv83Zcb/N2XG/zdlxv83Zcb/N2XG/zdlxv83Zcb/N5j5/zdlxv83mPn/N5j5/zeY+f83Zcb/N2XG/3dlxv83Zcb/N2XG/3dlxv93Zcb/d2XG/zeY+f83mPn/N2XG/zeY+f83mPn/N2XG/zdlxv83mPn/N5j5/zdlxv83Zcb/N2XG/zdlxv83mPn/N5j5/zeY+Q=="),
"format": 34896613399,
"index_count": 192,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYACgAIAAkACQALAAoADgAMAA0ADQAPAA4AEgAQABEAEQATABIAFgAUABUAFQAXABYAGgAYABkAGQAbABoAHgAcAB0AHQAfAB4AIgAgACEAIQAjACIAJgAkACUAJQAnACYAKgAoACkAKQArACoALgAsAC0ALQAvAC4AMgAwADEAMQAzADIANgA0ADUANwA2ADUANgA3ADgAOQA3ADUANgA4ADoAOQA1ADsAPAA5ADsAPQA8ADsAPgA2ADoAPQA7AD8APgA6AEAAPgBAAEEAPwBBAD0APgBBAD8AQgA+AD8APwBDAEIARgBEAEUARQBHAEYASgBIAEkASwBKAEkASgBLAEwATQBLAEkASgBMAE4ATQBJAE8AUABNAE8AUQBQAE8AUgBKAE4AUQBPAFMAUgBOAFQAUgBUAFUAUwBVAFEAUgBVAFMAVgBSAFMAUwBXAFYAWgBYAFkAWQBbAFoAXgBcAF0AXQBfAF4A"),
"lods": [0.042627, PackedByteArray("AgAEAAcABwABAAIAYwABAA0ADQAPAGMAGQAPAA0ADQAWABkAFgAHAGQAZAAXABYAFwBlABYAZgAjAGgAawAjAGYAZgBpAGsAbABrAGkAbABqAHUAdAByAGwAaABvAG0AbQBnAGgAdABzAHEAcABxAHMAcwBuAHAANwA2ADsANgA3ADgAPAA3ADsANgA4AEAAQQA8ADsAQgA2AEAAQgBAAEEAQgBBAEMAQQA7AEMASwBKAEkASgBLAE4ATQBLAEkAUgBKAE4ATQBJAE8AUgBOAFQAUQBNAE8AUgBUAFUAUQBPAFMAUgBVAFMAUwBVAFEA"), 0.704991, PackedByteArray("AgAEAAEAAgABAA0AFgABAAQABAAZABYADQAWABkAGQAPAA0ADQAPAGAALgBhAGIAMAAlAC4AJQAjAC4APAA2ADsAQwA2ADwAPAA7AEMASwBKAEkASwBJAFMAUgBKAEsAUwBVAEsAUgBVAFMAUgBLAFQAUgBUAFUA")],
"material": SubResource("StandardMaterial3D_mm1ov"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 118,
"vertex_data": PackedByteArray("/////zLz/6///wAAMvP/rzLz//////+PMvMAAP///48y8///AAD/7zLzAAAAAP/v/////8wM/8///wAAzAz/z//////MDP/P//8AAMwM/8//////MvP/r///AAAy8/+vMvMAAP///4/MDAAA////jzLz//////+PzAz//////48AAAAAMvP/rwAA//8y8/+vzAwAAP///4/MDP//////jzLzAAAAAP/vMvP//wAA/+/MDAAAAAD/78wM//8AAP/vAAAAAMwM/88AAP//zAz/zwAAAAAy8/+vAAD//zLz/6/MDAAAAAD/78wM//8AAP/vAAAAAMwM/88AAP//zAz/z+TtAAAy8//vMvMAAOTt/8/k7f//MvP/7zLz///k7f/PMvMAABoS/68y8///GhL/rzLzAADk7f/PMvP//+Tt/8/k7QAAzAz/j+Tt///MDP+PMvMAABoS/68y8///GhL/r+TtAAAy8//v5O3//zLz/+8aEgAAMvP/7xoS//8y8//vzAz//+Tt/8/MDAAA5O3/zxoS//8y8//vGhIAADLz/+8AAAAAzAz/vwAAAAAy8/+/zAwAAAAA/7/MDAAAGhL/vxoSAADMDP+/zAwAAOTt/7/k7QAAzAz/v8wMAAD///+/GhIAADLz/7/k7QAAMvP/vzLzAAAAAP+/MvMAAP///78y8wAAGhL/vzLzAADk7f+///8AAMwM/7///wAAMvP/v8wM//8aEv+vzAwAABoS/6/MDP//5O3/z8wMAADk7f/PAAD//zLz//8AAP//zAz//8wM////////zAz//+Tt//8aEv//MvP//8wM//8aEv//5O3//zLz///MDP//AAD//xoS///MDP//5O3//8wM//8y8////////zLz//8AAP//MvP//+Tt//8y8///GhL///////8y8////////8wM//8aEv//zAz/jxoSAADMDP+PzAz//xoS/6/MDAAAGhL/r+TtAADMDP+PGhIAAMwM/4/k7f//zAz/jxoS///MDP+PMvP/////ZYsy8///5O3w3swM///k7Y7eMvP/////S4sy8///AACy9AAA///MDOvXMvMAAOTtBs0y8wAA5O1y3uTt//8y8z7xMvMAABoSp68y8wAAGhKmoTLz//8aEpGy5O3//8wMg44aEgAAMvOc9BoSAAAy887UzAz//+TtnN7MDP//5O0aycwM//8aEmCwzAz//xoSfqHMDAAAGhIqshoSAADMDFqTGhIAAMwMwYv/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3////9/AAD/f////3////9/////f////3////9/AAD/fwAA/3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/AAD/fwAAAAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/f/9/AAD/fwAA/38AAP9/AAD/f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//38AAP9/AAD/fwAA/38AAP9/////fwAA/3////9/AAD/fwAA/3////9/AAD/fwAA/38AAP9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_q146t")

[sub_resource type="ArrayMesh" id="ArrayMesh_c3sx3"]
_surfaces = [{
"aabb": AABB(-0.45, 0.1, -0.45, 0.9, 0.05, 0.9),
"format": 34896613377,
"index_count": 66,
"index_data": PackedByteArray("AgAAAAEAAQADAAIAAwABAAQABAAFAAMABgAFAAQABAAHAAYACgAIAAkACQALAAoACQAIAAAAAAACAAkADAAKAAsACwANAAwABwAOAA8ADwAGAAcACwAJAAIAAgADAAsAAwANAAsAAwAFAA0ABQAPAA0ABQAGAA8ADAANAA8ADwAOAAwA"),
"lods": [0.0422713, PackedByteArray("BAAFAAEABAAHAAUAAQAFAA0ADQAFAAcABwAOAA0ADQAOAAwAAQANAAsACwANAAwADAAKAAsACgAIAAsACwAIAAAAAAABAAsA"), 0.0425326, PackedByteArray("CgAIAAAAAAABAAoAAQAMAAoAAQAEAAwADAAEAAcABwAOAAwA")],
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("//8AABr6AAAa+gAA//8AAJ70///n7wAA5+///570AADkBQAA//8AABcQ//+e9AAAYAv//+fvAAAAAAAAGvoAAP//AADkBQAAnvT//xcQAAAa+gAAAAAAAOfv//9gCwAA5AUAAAAAAAAXEP//YAsAAAAAAADkBQAAYAv//xcQAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_2l1ny"]
resource_name = "button-floor-square_button"
_surfaces = [{
"aabb": AABB(-0.45, 0.1, -0.45, 0.9, 0.05, 0.9),
"attribute_data": PackedByteArray("/5d2l/+Xdpf/l2WG/5dlhv+Xdpf/l3aX/5dlhv+XZYb/l2WG/5d2l/+XZYb/l3aX/5d2l/+XZYb/l3aX/5dlhv+Xdpf/l3aX/5dlhv+XZYb/l3aX/5dlhv+Xdpf/l2WG/5d2l/+XZYb/l3aX/5dlhv+XZYb/l2WG/5dlhv+XZYb/l2WG/5dlhv+XZYb/l2WG/5dlhv+XZYb/l3aX/5d2l/+Xdpf/l3aX/5d2l/+Xdpf/l3aX/5d2l/+XZYb/l2WG/5dlhg=="),
"format": 34896613399,
"index_count": 66,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYACgAIAAkACQALAAoADgAMAA0ADQAPAA4AEgAQABEAEQATABIAFgAUABUAFQAXABYAGgAYABkAGQAbABoAHgAcAB0AHQAfAB4AHwAgAB4AHwAhACAAIQAiACAAIQAjACIAJgAkACUAJQAnACYA"),
"lods": [0.0422713, PackedByteArray("BQAuACwABQALAC4ALAAuADAAMAAuAAsACwAYADAAMAAYABYALAAwAC8ALwAwABYAFgAOAC8ADgAMAC8ALwAMAAAAAAAtAC8A"), 0.0425326, PackedByteArray("KgAMAAAAAAAoACoAKAArACoAKAApACsAKwApAAsACwAYACsA")],
"material": SubResource("StandardMaterial3D_mm1ov"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 49,
"vertex_data": PackedByteArray("//8AABr6uLQa+gAA//8oqJ70///n76y35+///570caYa+gAA//+dpOQFAAD//52k5+///570y6EXEP//nvTLoRcQ//+e9HGm5AUAAP//KKhgC///5++stwAAAAAa+ri0//8AAOQFJNqe9P//FxDP1hr6AAAAAJ/r5+///2ALFu///wAA5AWA0f//AAAa+t+8nvT//xcQDc6e9P//5++bvhr6AAAAAM705+///2ALsffkBQAAAADO9BcQ//9gC7H3AAAAAOQFgNFgC///FxANzgAAAAAa+t+8YAv//+fvm76e9P//FxD//570///n7///5+///2AL///n7///nvT//xcQ//9gC///FxD//570//9gC///FxD//2AL///n7///FxD//2ALFu9gC///FxDP1uQFAAAAAJ/rAAAAAOQFJNoa+gAA///1vuQFAAD//wi8GvoAAAAAceLkBQAAAAAy8hr6AAD//767GvoAAP//IrQXEP//nvQ2sefv//9gCzDpFxD//2AL8PRVw5I0PNiCOB3AEjR+3Y45B9YbYxrj9qkv3YtniufOoo65gKKBuMGnErThv5G0qbwkscYKTrFDCSSxrBFOsfQSULhvIBPCBBxct8Eecr7BGyNUyQULVxgENnoj1Od7CtdvoK7HwZ6iyASc6r3Am4vB/3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7/zkq/OQomvzquR2c7FitnO/+A7Q43jcJ8VrvQMUXrexqvooEjSzqsy9+c1nPCwERNVefPO")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_c3sx3")

[sub_resource type="Animation" id="Animation_divd1"]
resource_name = "toggle"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("button-floor-square/button")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.0333333, 1, 0, -0.00012642, 0, 0.0666667, 1, 0, -0.00202272, 0, 0.1, 1, 0, -0.01024, 0, 0.133333, 1, 0, -0.0310291, 0, 0.166667, 1, 0, -0.0450617, 0, 0.2, 1, 0, -0.04936, 0, 0.3, 1, 0, -0.04936, 0, 0.333333, 1, 0, -0.0450617, 0, 0.366667, 1, 0, -0.0310291, 0, 0.4, 1, 0, -0.01024, 0, 0.433333, 1, 0, -0.00202272, 0, 0.5, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_mh3de"]
resource_name = "toggle-off"
length = 0.2
tracks/0/type = "position_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("button-floor-square/button")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -0.05, 0, 0.0333333, 1, 0, -0.0496958, 0, 0.0666667, 1, 0, -0.0450617, 0, 0.133333, 1, 0, -0.00493827, 0, 0.2, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_f6txd"]
resource_name = "toggle-on"
length = 0.2
tracks/0/type = "position_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("button-floor-square/button")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.0333333, 1, 0, -0.000304198, 0, 0.0666667, 1, 0, -0.00493827, 0, 0.133333, 1, 0, -0.0450617, 0, 0.2, 1, 0, -0.05, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ek0xd"]
_data = {
"toggle": SubResource("Animation_divd1"),
"toggle-off": SubResource("Animation_mh3de"),
"toggle-on": SubResource("Animation_f6txd")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_pijxt"]
size = Vector3(1, 0.2, 1)

[node name="BasicGroundButton" type="Node3D"]
script = ExtResource("1_kccom")

[node name="button-floor-square2" type="Node3D" parent="."]

[node name="button-floor-square" type="MeshInstance3D" parent="button-floor-square2"]
mesh = SubResource("ArrayMesh_lcok0")
skeleton = NodePath("")

[node name="button" type="MeshInstance3D" parent="button-floor-square2/button-floor-square"]
mesh = SubResource("ArrayMesh_2l1ny")
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="button-floor-square2"]
libraries = {
"": SubResource("AnimationLibrary_ek0xd")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0142891, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.131898, 0)
shape = SubResource("BoxShape3D_pijxt")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
pixel_size = 0.01
billboard = 1
text = "Button Test
"

[node name="Method" type="Node3D" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
